[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/button.png" type="Texture" id=1]
[ext_resource path="res://Sprites/button_shadow.png" type="Texture" id=2]
[ext_resource path="res://Fonts/UIFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/ButtonControl.gd" type="Script" id=4]
[ext_resource path="res://Sounds/click.tres" type="AudioStream" id=5]

[sub_resource type="Animation" id=20]
resource_name = "hover"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonTexture:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 0.34151, 1.56917 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "pressed"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.643137, 0.643137, 0.643137, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ButtonTexture:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 3 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "released"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Color( 0.643137, 0.643137, 0.643137, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ButtonTexture:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 3 ), Vector2( 0, 0 ) ]
}

[node name="Button" type="Button"]
anchor_right = 0.064
margin_right = 107.0
margin_bottom = 23.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0.203922, 0.211765, 0.337255, 1 )
custom_fonts/font = ExtResource( 3 )
text = "TEST"
flat = true
clip_text = true
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hover = SubResource( 20 )
anims/pressed = SubResource( 18 )
anims/released = SubResource( 19 )

[node name="Shadow" type="NinePatchRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = 1.0
margin_right = 16.0
margin_bottom = 12.0
texture = ExtResource( 2 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="ButtonTexture" type="NinePatchRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 16, 16 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Label" type="Label" parent="ButtonTexture"]
anchor_left = 0.03
anchor_top = 0.13
anchor_right = 0.973
anchor_bottom = 0.87
margin_left = 0.0219996
margin_top = 0.00999975
margin_right = -0.0198059
margin_bottom = -0.0100021
custom_colors/font_color = Color( 0.203922, 0.211765, 0.337255, 1 )
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1

[node name="ClickSoundAudioStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.099
pitch_scale = 0.33
bus = "Effects"

[connection signal="button_down" from="." to="." method="_on_Button_button_down"]
[connection signal="button_up" from="." to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
